<!--
  ~ Created by Yudi Setiawan on 1/23/18 10:29 PM
  ~ Copyright (c) 2018. All rights reserved.
  ~
  ~ Last modified 1/23/18 10:25 PM
  -->

<resources>
    <string name="app_name">Catalogue Movie</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="image_view_poster">image view poster</string>
    <string name="title_movie">Title Movie</string>
    <string name="overview_movie">Overview Movie</string>
    <string name="release_date">Release Date</string>
    <string name="keyword_validation_message">Keyword is empty. Please fill it!</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="upcoming_reminder">Upcoming Reminder</string>
    <string name="date">Date</string>
    <string name="_07_09_2017">07-09-2017</string>
    <string name="set_date">Set Date</string>
    <string name="time">Time</string>
    <string name="_22_56">22:56</string>
    <string name="set_time">Set Time</string>
    <string name="save">Save</string>
    <string name="message_daily_reminder">Hey, Check movie today yah</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="detail">Detail</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="daily_reminder_notification">Daily Reminder Notification</string>
    <string name="turn_on_off_daily_reminder">Turn on/off daily reminder</string>
    <string name="upcoming_reminder_notification">Upcoming Reminder Notification</string>
    <string name="turn_on_off_upcoming_reminder">Turn on/off upcoming reminder</string>
    <string name="setting_locale">Setting Locale</string>
    <string name="change_your_phone_localization">Change your phone localization</string>
    <string name="image_view_add_favorite">image view add favorite</string>
    <string name="overview">Overview</string>
    <string name="refresh_data">Please, refresh your data</string>
    <string name="refresh">Refresh</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">NO DATA</string>
</resources>
