<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_item_now_playing_activity_main_nav_drawer"
        android:icon="@drawable/ic_play_arrow_darker_gray_24dp"
        android:orderInCategory="1"
        android:title="@string/now_playing" />
    <item
        android:id="@+id/nav_item_upcoming_activity_main_nav_drawer"
        android:icon="@drawable/ic_movie_filter_darker_gray_24dp"
        android:orderInCategory="2"
        android:title="@string/upcoming" />
    <item
        android:id="@+id/nav_item_search_movie_activity_main_nav_drawer"
        android:icon="@drawable/ic_search_darker_gray_24dp"
        android:orderInCategory="3"
        android:title="@string/search" />
    <item
        android:id="@+id/nav_item_setting_activity_main_nav_drawer"
        android:icon="@drawable/ic_settings_darker_gray_24dp"
        android:orderInCategory="4"
        android:title="@string/settings" />
</menu>