<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Yudi Setiawan on 1/23/18 10:29 PM
  ~ Copyright (c) 2018. All rights reserved.
  ~
  ~ Last modified 1/23/18 10:24 PM
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context="com.ysn.cataloguemovie.ui.activities.settings.SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        android:textSize="13sp"
        android:textColor="@color/colorAccent"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_label_daily_reminder_notification_activity_settings"
            android:text="@string/daily_reminder_notification"
            android:textStyle="bold"
            android:layout_toLeftOf="@+id/switch_compat_daily_reminder_notification_activity_settings"
            android:layout_toStartOf="@+id/switch_compat_daily_reminder_notification_activity_settings"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_label_daily_reminder_notification_activity_settings"
            android:text="@string/turn_on_off_daily_reminder"
            android:textColor="@android:color/darker_gray"
            android:layout_toLeftOf="@+id/switch_compat_daily_reminder_notification_activity_settings"
            android:layout_toStartOf="@+id/switch_compat_daily_reminder_notification_activity_settings"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch_compat_daily_reminder_notification_activity_settings"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_label_upcoming_reminder_notification_activity_settings"
            android:text="@string/upcoming_reminder_notification"
            android:textStyle="bold"
            android:layout_toLeftOf="@+id/switch_compat_upcoming_reminder_notification_actviity_settings"
            android:layout_toStartOf="@+id/switch_compat_upcoming_reminder_notification_actviity_settings"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turn_on_off_upcoming_reminder"
            android:textColor="@android:color/darker_gray"
            android:layout_below="@+id/text_view_label_upcoming_reminder_notification_activity_settings"
            android:layout_toLeftOf="@+id/switch_compat_upcoming_reminder_notification_actviity_settings"
            android:layout_toStartOf="@+id/switch_compat_upcoming_reminder_notification_actviity_settings"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch_compat_upcoming_reminder_notification_actviity_settings"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="24dp"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relative_layout_container_settings_locale_activity_settings"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_label_setting_locale_actvivity_settings"
            android:text="@string/setting_locale"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_label_setting_locale_actvivity_settings"
            android:text="@string/change_your_phone_localization"
            android:textColor="@android:color/darker_gray"
            />

    </RelativeLayout>

</LinearLayout>
