<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ysn.cataloguemovie.ui.activities.detail.DetailMovieActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_view_poster_activity_detail_movie"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:contentDescription="@string/image_view_poster" />

        <TextView
            android:id="@+id/text_view_judul_film_activity_detail_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@+id/image_view_poster_activity_detail_movie"
            android:layout_toRightOf="@+id/image_view_poster_activity_detail_movie"
            android:layout_toLeftOf="@+id/image_view_add_to_favorite_movie_activity_detail_movie"
            android:layout_toStartOf="@+id/image_view_add_to_favorite_movie_activity_detail_movie"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_view_add_to_favorite_movie_activity_detail_movie"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/image_view_add_favorite"
            android:src="@drawable/ic_star_border_black_24dp"
            android:tag="star border"
            />

        <TextView
            android:id="@+id/text_view_release_date_activity_detail_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="150dp"
            android:layout_toEndOf="@+id/image_view_poster_activity_detail_movie"
            android:layout_toRightOf="@+id/image_view_poster_activity_detail_movie"
            android:text="@string/release_date" />

        <TextView
            android:id="@+id/text_view_value_release_date_activity_detail_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_release_date_activity_detail_movie"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@+id/image_view_poster_activity_detail_movie"
            android:layout_toRightOf="@+id/image_view_poster_activity_detail_movie" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/overview"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_view_overview_activity_detail_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
