<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/relative_layout_container_item_now_playing"
    android:paddingTop="@dimen/item_recycler_view_vertical_margin"
    android:paddingRight="@dimen/item_recycler_view_horizontal_margin"
    android:paddingBottom="@dimen/item_recycler_view_vertical_margin"
    android:paddingLeft="@dimen/item_recycler_view_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background_rounded_white"
    >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:id="@+id/image_view_poster_item_now_playing"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:contentDescription="@string/image_view_poster"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_view_add_favorite_item_now_playing"
        android:src="@drawable/ic_star_border_black_24dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:contentDescription="@string/image_view_add_favorite"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_judul_film_item_now_playing"
        android:layout_toRightOf="@+id/image_view_poster_item_now_playing"
        android:layout_toEndOf="@+id/image_view_poster_item_now_playing"
        android:layout_toLeftOf="@+id/image_view_add_favorite_item_now_playing"
        android:layout_toStartOf="@+id/image_view_add_favorite_item_now_playing"
        android:textSize="16sp"
        android:textStyle="bold"
        android:ellipsize="end"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_deskripsi_film_item_now_playing"
        android:layout_toRightOf="@+id/image_view_poster_item_now_playing"
        android:layout_toEndOf="@+id/image_view_poster_item_now_playing"
        android:layout_below="@+id/text_view_judul_film_item_now_playing"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:ellipsize="end"
        android:maxLines="3"
        android:textSize="14sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_tanggal_release_item_now_playing"
        android:layout_toRightOf="@+id/image_view_poster_item_now_playing"
        android:layout_toEndOf="@+id/image_view_poster_item_now_playing"
        android:layout_below="@+id/text_view_deskripsi_film_item_now_playing"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="15sp"
        android:maxLines="2"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_toRightOf="@+id/image_view_poster_item_now_playing"
        android:layout_toEndOf="@+id/image_view_poster_item_now_playing"
        android:layout_below="@+id/text_view_tanggal_release_item_now_playing"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/button_detail_item_now_playing"
            android:text="@string/detail"
            android:textColor="#ffffff"
            android:background="@drawable/background_button_rounded_pink"
            />

        <View
            android:layout_width="8dp"
            android:layout_height="1dp"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/button_share_item_now_playing"
            android:text="@string/share"
            android:textColor="#ffffff"
            android:background="@drawable/background_button_rounded_pink"
            />

    </LinearLayout>

</RelativeLayout>